# pycomposefile

./: .flake8  pyproject.toml
.devcontainer/: postCreate.sh
.github/: copilot-instructions.md
.github/workflows/: build.yaml  publish.yaml
src/: pyproject.toml
