[project]
name = "pycomposefile"
version = "0.0.1a1"
description = "Structured deserialization of Docker Compose files."
readme = "README.md"
authors = [
    { name = "Steven Murawski", email = "steven.murawski@microsoft.com" },
]
requires-python = ">=3.6"
dependencies = ["pyyaml"]
keywords = ["docker", "compose"]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/smurawski/pycomposefile"

[dependency-groups]
dev = [
    "pyyaml>=6.0",
    "build>=0.7",
    "flake8==7.3.0",
    "pylint==3.3.7",
    "timeout-decorator==0.5.0",
]

[tool.flit.sdist]
include = ["sample/", "tests/"]

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"
